name:                jsq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/begray/jsq#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Vinogradov
maintainer:          begray@gmail.com
copyright:           2017 Vladimir Vinogradov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Jsq.Options
                       Jsq.Query
  build-depends:       base >= 4.7 && < 5
                     , protolude 
                     , optparse-applicative
                     , json-stream
                     , aeson
                     , bytestring
                     , yaml
                     , text
                     , vector
                     , regex
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable jsq
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jsq
                     , protolude 
                     , optparse-applicative
                     , json-stream
                     , aeson
                     , bytestring
                     , yaml
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite jsq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsq
                     , protolude >= 0.1.6 && < 0.2
                     , tasty
                     , tasty-hunit
                     , aeson
                     , vector
                     , raw-strings-qq
                     , unordered-containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/begray/jsq
